2001-01-25  Robin * Slomkowski  <rslomkow@eazel.com>

	* nautilus.spec.in: put mozilla-psm and mozilla-mail to the
	nautilus-mozilla component

2001-01-25  Robey Pointer  <robey@eazel.com>

	* components/services/install/nautilus-view/nautilus-service-instal
	l-view.c: (nautilus_service_install_view_destroy),
	(update_package_info_display),
	(nautilus_service_install_downloading),
	(nautilus_service_install_installing),
	(nautilus_service_install_done),
	(nautilus_service_install_view_update_from_uri):
	* components/services/install/nautilus-view/nautilus-service-instal
	l-view.h:

	Send anonymous users to a different url (currently, the summary
	view) than logged-in users.  Attempt to show package details as
	early as possible.
	
2001-01-25  Mike Fleming  <mfleming@eazel.com>

	reviewed by: <sullivan@eazel.com>

	Bug 6032: summary view was crashing because widget was being
	destroyed during finish_button_activation.

	Added a ref to the button across the timer callback and
	avoided calling gtk_button_clicked and gtk_button_released
	if the widget is already destroyed.
	
	* libnautilus-extensions/nautilus-gtk-extensions.c:
	(finish_button_activation), (nautilus_gtk_button_auto_click):

2001-01-25  Josh Barrow  <josh@eazel.com>

	* icons/theme_preview.png:
	Updated theme preview icon for the new revamped, k-rad
	default icon theme.

2001-01-25  Josh Barrow  <josh@eazel.com>

	* icons/theme_preview.png:
	Updated theme preview icon for the new revamped, k-rad
	default icon theme.

2001-01-25  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-thumbnails.c:
	(make_thumbnail_path):
	fixed bug 5817, image files without extensions retain the
	hourglass icon even though thumbnails are made for them
	continuously.  Fixed by refining the criteria that
	make_thumbnail_path uses to find extensions.
	
2001-01-25  Ramiro Estrugo  <ramiro@eazel.com>

	* components/services/install/command-line/.cvsignore:
	* icons/crux_eggplant/.cvsignore: