@@ -1,3 +1,10 @@
+2001-01-25  Robey Pointer  <robey@eazel.com>
+
+	* components/services/install/lib/eazel-softcat.c:
+	(remove_directories_from_provides_list):
+
+	Fix wraparound slowness in softcat queries.
+
 2001-01-25  Robin * Slomkowski  <rslomkow@eazel.com>
 
 	* nautilus.spec.in: put mozilla-psm and mozilla-mail to the
